<resources>
    <string name="app_name">jetpacknavigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enteryouremailtogetotp">Enter Your Email To Get OTP</string>
    <string name="getotp">Get OTP</string>
    <string name="Send">Send</string>
    <string name="email">Email</string>
    <string name="message">Message</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="Verify">Verify</string>
    <string name="enterotp">Enter OTP</string>
    <string name="title_activity_bottomnav">bottomnav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="new_pass">Pass</string>
    <string name="conf_pass">Confirmed Pass</string>
    <string name="save_new_pass">Save New Pass</string>
    <string name="cancel">Cancel</string>
    <string name="save_new_password">Save New Password</string>
</resources>